Added info section and title container.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Hotel Page</title>
 </head>
 
 <body>
-  <i class="bi bi-house-fill"></i>
+  <header class="header-section">
+    <nav>
+      <div class="container">
+        <div class="logo-div">
+          <i class="bi bi-house-fill"></i>
+          <a href="#"><span class="text-primary">H2</span>O</a>
+        </div>
+        <ul class="nav-links-list">
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+          <li>
+            <a href="">Contact</a>
+          </li>
+        </ul>
+      </div>
+
+    </nav>
+    <div class="title-container">
+      <h2>Welcome to </h2>
+      <h1><span class="text-primary">Hotel Heaven</span> Online</h1>
+      <p>Enjoy your stay with us!</p>
+      <button class="btn btn-dark">Read More</button>
+    </div>
+
+  </header>
+
+  <section class="info-section">
+    <div class="info-img"></div>
+    <div class=" info bg-dark">
+      <h2>History of <span class="text-primary">H2</span>O</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda aliquam dolor alias iste autem, quaerat
+        magni unde accusantium qui fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis, explicabo quisquam
+        dolor placeat praesentium nesciunt mollitia quos nobis natus voluptatum asperiores!</p>
+      <button class="btn btn-light">Learn More</button>
+    </div>
+  </section>
 </body>
 
 </html>
