--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/mobile.css">
   <title>Hotel Page</title>
 </head>
 
@@ -14,10 +15,8 @@
   <header class="header-section">
     <nav>
       <div class="container">
-        <div class="logo-div">
-          <i class="bi bi-house-fill"></i>
-          <a href="#"><span class="text-primary">H2</span>O</a>
-        </div>
+        <h1><i class="bi bi-house-fill"></i><span class="text-primary"> H2</span>O</h1>
+
         <ul class="nav-links-list">
           <li>
             <a href="">Home</a>
@@ -44,13 +43,120 @@
   <section class="info-section">
     <div class="info-img"></div>
     <div class=" info bg-dark">
-      <h2>History of <span class="text-primary">H2</span>O</h2>
+      <h1>History of <span class="text-primary">H2</span>O</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda aliquam dolor alias iste autem, quaerat
         magni unde accusantium qui fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis, explicabo quisquam
         dolor placeat praesentium nesciunt mollitia quos nobis natus voluptatum asperiores!</p>
       <button class="btn btn-light">Learn More</button>
     </div>
   </section>
+  <section class="features">
+    <div class="box bg-primary">
+      <i class="bi bi-building"></i>
+      <h2>Great Location</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, eligendi laboriosam. Repellendus officia harum
+        eaque.</p>
+    </div>
+    <div class="box bg-light">
+      <i class="bi bi-wifi"></i>
+      <h2>High Speed Wi-Fi</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, eligendi laboriosam. Repellendus officia harum
+        eaque.</p>
+    </div>
+    <div class="box bg-primary">
+      <i class="bi bi-water"></i>
+      <h2>24 HR Pool Access</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, eligendi laboriosam. Repellendus officia harum
+        eaque.</p>
+    </div>
+  </section>
+  <section class="about-section bg-dark">
+    <div class="about-details container">
+      <div class="about-left">
+        <h1>About <span class="text-primary">H2</span>O</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis illo, similique labore
+          voluptate nulla animi dolorum eius laborum illum, nesciunt quod reprehenderit dicta autem vel nobis minima sit
+          deleniti!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate.</p>
+        <p>Doloribus,
+          voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
+
+      </div>
+      <div class="about-right">
+        <img src="./img/photo-2.jpg" alt="">
+      </div>
+    </div>
+  </section>
+  <section class="testimonials">
+    <div class="container">
+      <h1 class="testimonial-title">What Our Guests Say</h1>
+      <div class="testimony-div">
+        <div class="testimony bg-primary">
+          <img src="./img/person-1.jpg" alt="">
+          <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum
+            numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio
+            laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!"</p>
+        </div>
+        <div class="testimony bg-primary">
+          <img src="./img/person-2.jpg" alt="">
+          <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum
+            numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio
+            laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!"</p>
+        </div>
+        <div class="testimony bg-primary">
+          <img src="./img/person-3.jpg" alt="">
+          <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum
+            numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio
+            laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!"</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="contact-form bg-light">
+    <div class="container">
+      <h1><span class="text-primary">Contact</span> Us</h1>
+      <p>Questions? Feedback? Send us a message!</p>
+      <form class="form">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" name="name">
+        </div class="form-group">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" name="email">
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea type="text" name="message">
+          </textarea>
+        </div>
+        <button class="btn btn-dark">Submit</button>
+      </form>
+    </div>
+  </section>
+  <section class="contact-info bg-dark">
+    <div class="container contact-div">
+      <div class="box">
+        <i class="bi bi-geo-alt"></i>
+        <h3>Location</h3>
+        <p>33 Elm St, Seattle WA</p>
+      </div>
+      <div class="box">
+        <i class="bi bi-telephone"></i>
+        <h3>Phone #</h3>
+        <p>(987) 654-3210</p>
+      </div>
+      <div class="box">
+        <i class="bi bi-envelope"></i>
+        <h3>Email</h3>
+        <p>support@h2o.com</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <p>Hotel Heaven Online © 2021, All RIghts Reserved</p>
+  </footer>
 </body>
 
 </html>
