Changed link anchor for Read More button.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>Welcome to </h2>
       <h1><span class="text-primary">Hotel Heaven</span> Online</h1>
       <p>Enjoy your stay with us!</p>
-      <a href="#about" class="btn btn-dark">Read More</a>
+      <a href="#about" class="btn btn-dark read-more">Read More</a>
     </div>
   </header>
   <section id="history" class="info-section">
